# DSC

./: Cargo.toml  build.ps1
dsc/: group.export.dsc.resource.json
dsc/examples/: group_export.dsc.yaml
dsc/src/: args.rs  resource_command.rs  subcommand.rs
dsc_lib/src/dscresources/: dscresource.rs  invoke_result.rs
extensions/oci-discover/: Cargo.toml  README.md  oci-discover.dsc.extension.json
extensions/oci-discover/src/: main.rs
resources/filesys/src/: config.rs
